# elysiumparser

./: Cargo.toml
.github/workflows/: build-windows.yml
examples/: custom_parser.rs
src/: lib.rs  main.rs
