[package]
name = "elysiumparser"
version = "0.1.0"
edition = "2024"
description = "Log file parser with support for complex search expressions and compressed files"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
name = "elysiumparser"
path = "src/lib.rs"

[[bin]]
name = "elysiumparser"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
flate2 = "1.0"
walkdir = "2.4"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
num_cpus = "1.16"
regex = "1.10"